# githttp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CN.md  README_ZH.md  config.example.toml  config.example.yaml  config.yaml.bak  quickstart.bat  quickstart.sh
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-05-19-quickstart-wizard.md
docs/superpowers/specs/: 2026-05-19-quickstart-wizard-design.md
src/: auth.rs  cgi.rs  config.rs  git_cgi.rs  git_native.rs  main.rs  quickstart.rs  users.rs
tests/: workflow.rs
