[package]
name = "githttp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
bytes = "1"
sha2 = "0.10"
constant_time_eq = "0.3"
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
