[package]
name = "githttp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "io-util", "process", "sync", "macros"] }
bytes = "1"
sha2 = "0.10"
constant_time_eq = "0.3"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"
colored = "2"
dirs = "5"
local-ip-address = "0.6"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
