[package]
name = "githttp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "io-util", "process", "sync", "macros"] }
bytes = "1"
sha2 = "0.11"
constant_time_eq = "0.4"
getrandom = "0.4"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"
colored = "3"
dirs = "6"
local-ip-address = "0.6"
tokio-util = { version = "0.7", features = ["io"] }
futures-core = "0.3"
tokio-stream = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
